welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not found: value decalage
	val decalage(i) = litMessage().toInt
            ^Array2:2: error: recursive value i needs type
	val decalage(i) = litMessage().toInt
                    ^Array2:9: error: not found: value decalage
		recule (getMondeHauteur()-decalage(i))
                                          ^